[package]
name = "pylon-shimload"
description = "Rust wrapper of the Pylon libraries for Basler cameras"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = [
    "Andrew Straw <strawman@astraw.com>",
    "Falco Hirschenberger <falco.hirschenberger@gmail.com>",
]
edition = "2018"
repository = "https://github.com/strawlab/pylon-shimload"
keywords = ["basler", "camera", "bindings", "pylon", "image"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "hardware-support",
    "multimedia::images",
]

[dependencies]
libloading = "0.9"
tokio = { version = "1", features = ["rt", "macros", "net"], optional = true }
tokio-stream = { version = "0.1.8", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", optional = true, features = ["winbase", "winerror", "synchapi"]}

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
anyhow = "1"

[features]
stream = ["dep:tokio", "dep:tokio-stream", "dep:winapi"]

[[example]]
name = "async-grab"
required-features = ["stream", "tokio/rt-multi-thread"]
